RESOLVED FIXED105246
REGRESSION(r137442): Crash because of an uninitialized member.
https://bugs.webkit.org/show_bug.cgi?id=105246
Summary REGRESSION(r137442): Crash because of an uninitialized member.
Dongseong Hwang
Reported 2012-12-17 20:22:37 PST
TextureMapperGL defines m_context although TextureMapper defines m_context. It is why r137442 made a mistake to remove initialization code of m_context in TextureMapperGL. This patch removes the duplicated member in TextureMapperGL.
Attachments
Patch (4.93 KB, patch)
2012-12-17 20:25 PST, Dongseong Hwang
no flags
Patch (5.06 KB, patch)
2012-12-17 20:41 PST, Dongseong Hwang
no flags
Dongseong Hwang
Comment 1 2012-12-17 20:25:05 PST
Noam Rosenthal
Comment 2 2012-12-17 20:34:15 PST
Comment on attachment 179869 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=179869&action=review > Source/WebCore/ChangeLog:10 > + TextureMapperGL defines m_context although TextureMapper defines m_context. It > + is why r137442 made a mistake to remove initialization code of m_context in > + TextureMapperGL. This patch removes the duplicated member in TextureMapperGL. It is why r137442 made a mistake to remove initialization code of m_context in TextureMapperGL -> r137442 removes the initialization code in TextureMapperGL, which is what causes this regression.
Dongseong Hwang
Comment 3 2012-12-17 20:41:43 PST
Dongseong Hwang
Comment 4 2012-12-17 20:44:16 PST
thx :)
WebKit Review Bot
Comment 5 2012-12-17 21:24:32 PST
Comment on attachment 179871 [details] Patch Clearing flags on attachment: 179871 Committed r137982: <http://trac.webkit.org/changeset/137982>
WebKit Review Bot
Comment 6 2012-12-17 21:24:36 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2012-12-18 10:07:33 PST
When reporting a regression with a known cause, please always CC author and reviewer of a patch that caused it.
Allan Sandfeld Jensen
Comment 8 2012-12-18 10:49:24 PST
(In reply to comment #7) > When reporting a regression with a known cause, please always CC author and reviewer of a patch that caused it. He had made it block on the original bug, so we got the emails concerning this without the need for a direct cc.
Dongseong Hwang
Comment 9 2012-12-18 16:57:31 PST
(In reply to comment #7) > When reporting a regression with a known cause, please always CC author and reviewer of a patch that caused it. Yeah, I see.
Note You need to log in before you can comment on or make changes to this bug.