REGRESSION(r137442): Crash because of an uninitialized member. https://bugs.webkit.org/show_bug.cgi?id=105246

Patch by Huang Dongsung <luxtella@company100.net> on 2012-12-17
Reviewed by Noam Rosenthal.

TextureMapperGL defines m_context although TextureMapper defines m_context.
r137442 removes the initialization code in TextureMapperGL, which is
what causes this regression. This patch removes the duplicated member
in TextureMapperGL.

No new tests. Covered by existing tests.

* platform/graphics/texmap/TextureMapper.cpp:
(WebCore::TextureMapper::TextureMapper):
* platform/graphics/texmap/TextureMapper.h:
(WebCore::TextureMapper::setGraphicsContext):
(WebCore::TextureMapper::graphicsContext):
(TextureMapper):
* platform/graphics/texmap/TextureMapperGL.h:
(WebCore):

Canonical link: https://commits.webkit.org/123489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137982 268f45cc-cd09-0410-ab3c-d52691b4dbfc